# ZGrader

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4fc315ec92bc_add_spanish_note_templates.py  ac0b8445171e_initial_schema.py  c2a44009a4ec_add_submission_language.py  e02560c43629_phase2_user_verification_token_nullable_.py
backend/tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_catalog.py  test_api_submissions.py  test_centering.py  test_corners.py  test_edges.py  test_email.py  test_pdf_generation.py  test_rules_engine.py  test_surface.py  test_watcher.py
backend/tests/fixtures/: generate_samples.py
backend/zgrader/: config.py  db.py  dev_trigger.py  scan_ingest.py
backend/zgrader/analysis/: annotate.py  centering.py  corners.py  edges.py  pipeline.py  preprocessing.py  rules_engine.py  surface.py
backend/zgrader/api/: deps.py  main.py
backend/zgrader/api/routers/: admin.py  auth.py  (+2 more)
backend/zgrader/auth/: security.py
backend/zgrader/email/: client.py  notifications.py  strings.py
backend/zgrader/models/: __init__.py  analysis_result.py  audit_log.py  card.py  card_dimensions.py  grading_comparison.py  mixins.py  report.py  scan_image.py  settings.py  submission.py  user.py
backend/zgrader/reports/: builder.py  strings.py
backend/zgrader/schemas/: admin.py  auth.py  catalog.py  submission.py
backend/zgrader/seed/: __init__.py  card_dimensions_seed.py  tolerance_rules_seed.py
backend/zgrader/worker/: main.py  watcher.py
(+51 files in other folders)
