[project]
name = "zgrader"
version = "0.1.0"
description = "TCG card pre-grading system: automated centering/corners/edges/surface analysis, multi-company comparison, and PDF reporting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "opencv-python-headless>=4.10",
    "scikit-image>=0.24",
    "numpy>=1.26,<2.3",
    "pillow>=10.4",
    "weasyprint>=62.3",
    "jinja2>=3.1",
    "watchdog>=5.0",
    "passlib>=1.7",
    # passlib 1.7.4's bcrypt backend-detection self-test breaks against
    # bcrypt>=4.1 (passlib is effectively unmaintained upstream) -- pin below
    # the break.
    "bcrypt<4.1",
    "pyjwt>=2.9",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pypdf>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zgrader*"]
